# RAG-learning-projects

./: .gitignore  README.md
RAG-OCR/: app.py  ingest.py  pyproject.toml
RAG-pdf/: app.py  ingest.py  pyproject.toml
RAG-sqlite/: main.py  pyproject.toml
RAG-web/: app.py  ingest.py  pyproject.toml
Rag-MSEB/: app.py  ingest.py  pyproject.toml
